# schrute

./: .dockerignore  .gitignore  .mcp.json  .mise.toml  AGENTS.md  CLAUDE.md  CODEBASE-AUDIT.md  CODEBASE_REVIEW_FINDINGS.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  REVIEW-FINDINGS.md  SECURITY.md  docker-compose.yml  package.json  pkg.config.json  pkgx.yaml  smithery.yaml  tsconfig.json  tsconfig.v01.json  tsconfig.v02.json  vitest.config.ts  vitest.live.config.ts
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish-devcontainer.yml  release.yml
Formula/: schrute.rb
agents/: exploration-guide.md  skill-debugger.md  skill-validator.md
commands/: doctor.md  explore.md  record.md  skills.md  status.md
docs/: agent-browser-parity.md  frontend-architecture.md  phase-1-6-audit.md
hooks/: hooks.json
integrations/hermes/: README.md
integrations/openclaw/: README.md
native/: Cargo.toml
native/src/: audit_chain.rs  canonicalizer.rs  chrome_emulation.rs  har_parser.rs  ip_policy.rs  lib.rs  noise_filter.rs  param_discoverer.rs  path_risk.rs  redactor.rs  schema_inference.rs  semantic_diff.rs  tls_fetch.rs  volatility.rs
prompts/: architect.md  code-reviewer.md  plan-reviewer.md  scope-analyst.md  security-analyst.md
scripts/: bench-fetch.mjs  benchmark-3-sites.ts  ctl.mjs  ctl2.mjs  e2e-features.mjs  e2e-infra-filter-test.mjs  explore-cg.json  explore-eth.json  mcp-live-test.mjs  navigate-btc.json  package-binary.sh  rebuild-native.sh  record-api.json  record-api2.json  record-api3.json  record-cg.json  record-cli.json  release.sh  smoke-cli.sh  sync-version.js  verify-cg-live.mts
skills/browser-tool-selection/: SKILL.md
skills/oneagent-usage/: SKILL.md
skills/schrute-usage/: SKILL.md
src/: doctor.ts  index.ts  lib.ts  trust.ts  version.ts
src/app/: import-service.ts  service.ts
src/automation/: bot-auth.ts  classifier.ts  cookie-refresh.ts  rate-limiter.ts  strategy.ts
src/browser/: agent-browser-adapter.ts  agent-browser-backend.ts  agent-browser-cleanup.ts  agent-browser-ipc.ts  agent-browser-provider.ts  auth-coordinator.ts  auth-store.ts  backend.ts  base-browser-adapter.ts  benchmark.ts  cdp-connector.ts  cookie-jar.ts  engine.ts  feature-flags.ts  har-recorder.ts  human-input.ts  live-chrome-backend.ts  manager.ts  modal-state.ts  multi-session.ts  netscape-cookie-parser.ts  parallelism-governor.ts  playwright-backend.ts  playwright-mcp-adapter.ts  pool.ts  provider.ts  real-browser-handoff.ts  screenshot-resize.ts  snapshot-refs.ts  webmcp-bridge.ts
src/capture/: action-frame.ts  api-extractor.ts  auth-detector.ts  canonicalizer.ts  cdp-har-recorder.ts  chain-detector.ts  (+14 more)
src/client/python/: __init__.py  oneagent_client.py  pyproject.toml  schrute_client.py
tests/: global-setup.ts  helpers.ts
(+341 files in other folders)
