[package]
name = "schrute-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
regex = "1"
idna = "1"
ipnet = "2"
url = "2"
wreq = "6.0.0-rc.28"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
