[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schrute-client"
version = "0.2.0"
description = "Python client SDK for Schrute REST API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["schrute", "browser-agent", "api-client", "sdk", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/sheeki03/schrute"
Documentation = "https://github.com/sheeki03/schrute#python-sdk"
Repository = "https://github.com/sheeki03/schrute"
Issues = "https://github.com/sheeki03/schrute/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "ruff>=0.4",
]
